vpc/aws_vpc_route.tf
# ルートは、ルートテーブルの１レコードに該当します
resource "aws_route" "public" {
  route_table_id         = aws_route_table.public.id
  gateway_id             = aws_internet_gateway.example.id
  destination_cidr_block = "0.0.0.0/0"
}
