vpc/aws_vpc_route_private.tf
#resource "aws_route" "private" {
  #route_table_id         = aws_route_table.private_0.id
  #nat_gateway_id         = aws_nat_gateway.nat_gateway_0.id
  #destination_cidr_block = "0.0.0.0/0"
#}
