vpc/aws_vpc_route_table_association.tf
# どのルートテーブルを利用するかはサブネット単位で決めます
# ルートテーブルとサブネットを紐付けます
resource "aws_route_table_association" "public_0" {
  subnet_id      = aws_subnet.public_0.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}
